 - [OPTIMIZED]	Code Cleanup
 - [ADDED]		Style value for Dialog based on OS Version
 - [FIXED]		Translation spelling correction

 PNRStatusAppV3 3.1.60 [June 2013]
 - [CHANGED]	Built with Android 4.2.2 SDK
 - [CHANGED]	Implemented themes properly pre honeycomb and post (Holo)
 - [FIXED]		Divider image on Messages list was visible when there was no messages to show
 - [OPTIMIZED]	Optimized MessagesFragment View
 - [ADDED]		Indicate to teh user in case there are no messages in Message View
 
 PNRStatusAppV3 3.1.68 [July 2013]
 - [ADDED]		Added utility class DialogUtils for utility methods for displaying Dialogs
 - [ADDED]		Added strings for License
 - [OPTIMIZED]	Removed unused code
 - [ADDED]		One more dialog style added with titlebar
 - [ADDED]		Added layout and text for License Dialog
 - [OPTIMIZED]	Improved the way of showing License Dialog
 
PNRStatusAppV3 3.1.86 [August 2013]
 - [CHANGED]	Able to reflect settings changes for 
 - [OPTIMIZED]	Layout Optimizations
 - [ADDED]		Dark Message image for no PNR messages found
 - [CHANGED]	PNR Buttons are now image buttons
 - [ADDED]		Settings with icon moved to actionbar if supported 
 
PNRStatusAppV3 3.1.92 [October 2013]
 - [ADDED]		Add icon for the add prn button
 - [CHANGED]	Moved resources to XMLs
 - [CHANGED]	Hero screen layout
 - [ADDED]		Disabled state for the Info button
 - [CHANGED]	The Ticket details Popup is standardized
 
PNRStatusAppV3 3.1.95 "marvin" [November 2013]
 - [CHANGED]	Build target API is 18
 - [CHANGED]	Minor layout tweaks
 - [CHANGED]	Minor message change
 
PNRStatusAppV3 3.1.97 "marvin" [December 2013]
 - [CHANGED]	File organization
 - [CHANGED]	App Icon change
 
PNRStatusAppV3 3.1.98 "marvin" [December 2013]
 - [CHANGED]	Workarounds to work with indianrail

 =============================
Version 3.2 Code named Marvin2
==============================
 
PNRStatusAppV3 3.2.10 [March 2013]
 - [CHANGED]	Using apache http client for network
 - [CHANGED]	Exception handling
 - [CHANGED]	UI Tweaks
 