@@ -1,0 +1,31 @@
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="@dimen/padding_medium"
+    android:orientation="vertical" >
+
+    <TextView
+        android:id="@+id/ticket_pnrnumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:text="@string/ticket_info_title"
+        android:textColor="@color/default_blue"
+        android:textSize="20sp"
+        android:textStyle="bold" >
+    </TextView>
+
+    <ImageButton
+        android:id="@+id/share_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/empty_text"
+        android:hapticFeedbackEnabled="true"
+        android:src="@drawable/share_button_drawable" >
+    </ImageButton>
+
+</RelativeLayout>
