@@ -1,113 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/TicketInfoLayout"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="horizontal" >
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
+    android:orientation="vertical"
+    android:padding="@dimen/padding_large" >
 
-    <LinearLayout
-        android:id="@+id/TicketInfoLayout"
+    <TextView
+        android:id="@+id/ticket_info_line1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/ticket_info_line2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/ticket_info_line3"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/ticket_info_line4"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/ticket_info_line5"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/passenger_info_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="2dp"
-        android:layout_marginTop="0dp"
-        android:gravity="center_vertical"
-        android:orientation="vertical" >
+        android:layout_marginBottom="2dp"
+        android:text="@string/passenger_info_title"
+        android:textStyle="bold" >
+    </TextView>
 
-        <RelativeLayout
-            android:id="@+id/TicketInfoHeader"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp" >
-
-            <!-- <TextView
-                android:id="@+id/ticket_pnrnumber"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_margin="@dimen/margin_small"
-                android:text="@string/empty_text"
-                android:textStyle="bold" >
-            </TextView> -->
-
-            <ImageButton
-                android:id="@+id/share_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginRight="@dimen/margin_large"
-                android:layout_marginTop="@dimen/margin_large"
-                android:background="@android:color/transparent"
-                android:contentDescription="@string/empty_text"
-                android:hapticFeedbackEnabled="true"
-                android:src="@drawable/share_button_drawable" >
-            </ImageButton>
-        </RelativeLayout>
-
-        <LinearLayout
-            android:id="@+id/TicketInfoDetailLayout"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:gravity="center_vertical"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/ticket_info_line1"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/ticket_info_line2"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/ticket_info_line3"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/ticket_info_line4"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/ticket_info_line5"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp" >
-            </TextView>
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/passenger_info_layout"
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/TicketInfoLayout"
-        android:layout_marginTop="@dimen/margin_medium"
-        android:orientation="vertical"
-        android:paddingBottom="2dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp" >
-
-        <TextView
-            android:id="@+id/passenger_info_title"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:text="@string/passenger_info_title"
-            android:textStyle="bold" >
-        </TextView>
+        android:layout_height="wrap_content" >
 
         <ListView
             android:id="@android:id/list"
@@ -127,6 +63,6 @@
             android:layout_margin="@dimen/margin_medium"
             android:gravity="center_vertical|center_horizontal"
             android:text="@string/empty_text" />
-    </LinearLayout>
+    </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
